--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -60,3 +60,12 @@
     transform: rotate3d(1, 0, 0, 359deg);
   }
 }
+
+@media screen and (max-width: 1024px) {
+  .pageName {
+    font-size: 28px;
+  }
+  .groupLink {
+    display: none;
+  }
+}
