--- a/src/routes/Home.module.css
+++ b/src/routes/Home.module.css
@@ -68,3 +68,21 @@ footer author links
   color: #4000a7;
   transform: scale(1.1);
 }
+
+/* 반응형 */
+
+@media screen and (max-width: 600px) {
+  .container::after {
+    content: 'please watch on Desktop! 🖥';
+    background-color: rgba(255, 255, 255, 0.85);
+    padding: 60px;
+    border-radius: 10px;
+    display: block;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 40px;
+    text-align: center;
+  }
+}
